fix(legacy-plugin-chart-horizon): horizon chart should scroll when overflowing (#180)
* fix: horizon chart should scroll when overflowing

* fix: rebase and adapt

* fix: lint

--- a/superset-frontend/temporary_superset_ui/superset-ui/plugins/superset-ui-plugins/packages/superset-ui-legacy-plugin-chart-horizon/src/HorizonChart.css
+++ b/superset-frontend/temporary_superset_ui/superset-ui/plugins/superset-ui-plugins/packages/superset-ui-legacy-plugin-chart-horizon/src/HorizonChart.css
@@ -19,6 +19,7 @@
 
 .superset-legacy-chart-horizon {
   overflow: auto;
+  position: relative;
 }
 
 .superset-legacy-chart-horizon .horizon-row  {
